# EECE5554

./: README.md
LAB0/: sreenivasan.sh.txt
LAB0/src/: publisher.py  subscriber.py
LAB1/src/: README.md  analyze_gps.py
LAB1/src/data/: stationary-occluded.txt  stationary-open.txt  straight-line.txt
LAB1/src/data/rosbag2_2026_02_07-18_17_23/: rosbag2_2026_02_07-18_17_23_0.db3
LAB1/src/data/rosbag2_2026_02_07-18_38_12/: metadata.yaml
LAB1/src/data/rosbag2_2026_02_07-18_47_31/: metadata.yaml  rosbag2_2026_02_07-18_47_31_0.db3
LAB1/src/gps_driver/: CMakeLists.txt  setup.py
LAB1/src/gps_driver/gps_driver/: driver.py
LAB1/src/gps_driver/msg/: GpsRaw.msg
LAB2/: README.md
LAB2/data/gps_walking_data/: metadata.yaml
LAB2/data/rtk_open_data/: metadata.yaml  rtk_open_data_0.db3
LAB2/data/rtk_walking_data/: metadata.yaml
LAB2/src/gps_driver/: CMakeLists.txt
LAB2/src/gps_driver/launch/: driver.launch.py
LAB2/src/gps_driver/msg/: GpsMsg.msg
LAB3/Analysis/: allan_variance.py  imu_analysis.py
LAB3/Data/group_record/: metadata.yaml
LAB3/Data/stationary_data/: metadata.yaml
LAB3/emulator/: README.md  serial_emulator.py
LAB3/src/imu_driver/: package.xml  setup.cfg  setup.py
LAB3/src/imu_driver/imu_driver/: imu_driver.py
LAB3/src/imu_driver/launch/: imu_launch.py
LAB3/src/imu_msgs/: CMakeLists.txt  package.xml
LAB3/src/imu_msgs/msg/: IMUmsg.msg
gnss/analysis/: analyze_gps.py
gnss/data/gps_occluded_data/: occluded-stationary
gnss/data/gps_open_data/: rosbag2_2026_02_07-18_38_12_0.db3
gnss/data/rtk_occluded_data/: metadata.yaml  rtk_occluded_data_0.db3
gnss/data/rtk_walking_data/: rtk_walking_data_0.db3
gnss/src/gps_driver/: package.xml
gnss/src/gps_driver/gps_driver/: gps_collector.py  rtk_driver.py
gnss/src/gps_driver/launch/: rtk_driver.launch.py
gnss/src/gps_driver/msg/: RtkMsg.msg
